Updates and readme

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <script src="./app/js/fPlan.js"></script>
 <script src="./app/js/fPlan.seat-edit-controller.js"></script>
 <script src="./app/js/fPlan.controller.js"></script>
+<script src="./app/js/fPlan.filereader.js"></script>
 <!-- Angular For Demo -->
 <script src="./app/demo/app.js"></script>
 </head>
